# DPF

./: CMakeLists.txt
cmake/: DPF-plugin.cmake
distrho/: DistrhoPlugin.hpp
distrho/src/: DistrhoPlugin.cpp  DistrhoPluginInternal.hpp  DistrhoPluginLV2export.cpp  DistrhoPluginVST2.cpp
examples/FltkUI/: CMakeLists.txt  DistrhoPluginInfo.h  FltkExamplePlugin.cpp  FltkExampleUI.cpp  FltkTestUI.fl  README.md
examples/QtUI/: CMakeLists.txt  DistrhoPluginInfo.h  PluginWindow.cpp  PluginWindow.h  PluginWindow.ui  QtExamplePlugin.cpp  QtExamplePluginUI.cpp  README.md
src/: amsynth_dpf.cpp  amsynth_dpf_banks.h
